--- a/frontend/src/Components/LimitedTimeOffer/LimitedTimeOffer.css
+++ b/frontend/src/Components/LimitedTimeOffer/LimitedTimeOffer.css
@@ -53,7 +53,7 @@
 
   .offer-heading {
     font-size: 35px;
-    color: #171717;
+    color: #7b4d48;
     margin-bottom: 30px;
     text-transform: uppercase;
     font-weight: 700;
