--- a/frontend/src/Components/LimitedTimeOffer/LimitedTimeOffer.css
+++ b/frontend/src/Components/LimitedTimeOffer/LimitedTimeOffer.css
@@ -1,6 +1,7 @@
 .limited-offer-section {
-     background-color:#e7e8e6; 
-     margin-top: 50px ;
+     /* background-color:#e7e8e6;  */
+   
+     margin-top: 53px ;
      overflow: hidden;
 }
 
