--- a/frontend/src/Components/Template/Template.css
+++ b/frontend/src/Components/Template/Template.css
@@ -61,6 +61,7 @@
     margin: 10px; 
     padding: 0; 
     cursor: pointer;
+    margin-bottom: 45px;
 }
 
 .template-design > div {
@@ -176,13 +177,45 @@
   
 .fixed{
   position: absolute;
-   top: 52.5%;
+   top: 51.2%;
   left: 2.5%; 
 }
 
 .fixed-image {
   border-radius: 8px;
-  height: 475px;
+  height: 470px;
   width: 670px;
 }
   
+
+.load-more-events {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 40%;
+}
+
+.load-more-events::before,
+.load-more-events::after {
+  content: "";
+  flex: 1;
+  height: 1px;
+  background-color: #a4a1a1; 
+  margin: 0 12px; 
+}
+
+.load-more-events-btn {
+  background-color: #5d5b5b; 
+  color: #fff; 
+  border: none;
+  border-radius: 50px;
+  padding: 10px 30px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.load-more-events-btn:hover {
+  background-color: #878585; /* Slightly darker on hover */
+}
