--- a/frontend/src/Components/LimitedTimeOffer/LimitedTimeOffer.css
+++ b/frontend/src/Components/LimitedTimeOffer/LimitedTimeOffer.css
@@ -1,6 +1,5 @@
 .limited-offer-section {
-     /* background-color:#e7e8e6;  */
-   
+     background-color:#e7e8e6;  
      margin-top: 53px ;
      overflow: hidden;
 }
