--- a/frontend/src/Pages/Explore/Explore.css
+++ b/frontend/src/Pages/Explore/Explore.css
@@ -1,7 +1,6 @@
 /* Container */
 .explore {
   font-family: 'Inter', sans-serif;
-  color: #1f1f1f;
   padding: 0;
   margin: 0;
   background-color: #f9f9f9;
@@ -11,7 +10,7 @@
 .explore-banner {
   position: relative;
   width: 100%;
-  height: 400px;
+  height: 420px;
   overflow: hidden;
 }
 
@@ -30,13 +29,12 @@
 }
 
 .explore-banner-title {
-  font-size: 2.5rem;
-  margin: 0;
+  font-size: 36px;
 }
 
 .explore-banner-org {
   margin-top: 5px;
-  font-size: 1rem;
+  font-size: 16px;
 }
 
 .explore-banner-org-name {
