--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -19,7 +19,7 @@
   
   .footer-top h2 {
     color: white;
-    font-size: 30px;
+    font-size: 1.6rem;
     margin-bottom: 5px;
   }
   
@@ -32,12 +32,12 @@
   
   .footer-column {
     flex: 1;
-    min-width: 200px;
+    min-width: 40vw;
     margin-bottom: 20px;
   }
   
   .footer-column h3 {
-    font-size: 16px;
+    font-size: 0.6rem;
     margin-bottom: 10px;
     text-transform: uppercase;
     color: #94a3b8;
@@ -55,7 +55,7 @@
   .footer-column ul li a {
     color: white;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 0.7rem;
   }
   
   .footer-column ul li a:hover {
@@ -66,7 +66,7 @@
   .social-icons a {
     margin-right: 10px;
     color: white;
-    font-size: 18px;
+    font-size: 0.8rem;
     background: #1e293b;
     padding: 8px 10px;
     border-radius: 5px;
