--- a/frontend/src/Components/Hero/hero.css
+++ b/frontend/src/Components/Hero/hero.css
@@ -95,7 +95,7 @@
   }
 }
 
-@media (max-width: 480px) {
+@media screen and (max-width: 480px) {
   .hero-container {
     margin: 20px auto;
     padding: 0 12px;
@@ -123,7 +123,14 @@
   }
 }
 
-
+@media screen and (max-width: 400px) {
+  .book-now-container h2{
+    font-size: 1.2rem;
+  }
+  .book-now-btn{
+    font-size: 0.8rem;
+  }
+}
 
 
 
