--- a/frontend/src/Components/InfoBar/InfoBar.css
+++ b/frontend/src/Components/InfoBar/InfoBar.css
@@ -3,7 +3,7 @@
     padding: 20px 30px;
     border-radius: 12px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    width: 70%;
+    width: 70vw;
     max-width: 1200px;
     margin: -62px auto 0;
     position: relative;
@@ -20,8 +20,8 @@
   
   .filter-group {
     flex: 1 0 auto;
-    min-width: 120px;
-    padding: 0 10px;
+    min-width: 8vw;
+    padding: 0 0.3rem;
     position: relative;
   }
   
@@ -56,7 +56,7 @@
     width: 100%;
     padding: 8px 0;
     border: none;
-    font-size: 13px;
+    font-size: 0.7rem;
     background: transparent;
     color: #333;
     appearance: none;
@@ -66,7 +66,7 @@
   
   .discover-btn {
     flex-shrink: 0;
-    margin-left: 10px;
+    margin-left: 0.3rem;
   }
   
   .discover-btn button {
@@ -76,7 +76,7 @@
     padding: 12px 20px;
     border-radius: 15px;
     cursor: pointer;
-    font-size: 15px;
+    font-size: 0.8rem;
     font-weight: 600;
     display: flex;
     align-items: center;
@@ -94,18 +94,20 @@
     .discovery-filter {
       width: 80%;
     }
+    .discover-btn button {
+      padding: 0 0.6rem;
+    }
   }
   
   @media (max-width: 992px) {
     .discovery-filter {
       width: 85%;
-      padding: 20px;
     }
   }
   
   @media (max-width: 768px) {
     .discovery-filter {
-      width: 90%;
+      width: 70vw;
       margin-top: -30px;
     }
     
@@ -124,7 +126,6 @@
     }
     
     .discover-btn {
-      width: 100%;
       margin-left: 0;
       margin-top: 10px;
     }
@@ -160,5 +161,15 @@
     .book-now-btn {
       padding: 10px 20px;
       font-size: 1rem;
+    }
+  }
+@media screen and (max-width: 300px) {
+    .discovery-filter{
+      width: 55vw;
+    }
+  }
+  @media screen and (max-width: 1100px) {
+    .filter-container{
+      gap: 0px;
     }
   }
