--- a/frontend/src/Components/NavBar/NavBar.css
+++ b/frontend/src/Components/NavBar/NavBar.css
@@ -30,8 +30,8 @@
   }
   
   .navlogo img{
-    height:90px;
-    width: 90px;
+    height: 3rem;
+    width: 10rem;
   }
   
   
@@ -148,3 +148,181 @@
   .notification-icon:hover {
     color: #4aa4ea;
   } 
+.login-signupham {
+  display: none !important;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  padding: 15px 0;
+}
+
+/* Buttons */
+.login-signupham button {
+  width: 120px;
+  height: 40px;
+  border: none;
+  border-radius: 95px;
+  background-color: #2C9CF0;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.login-signupham button a {
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  line-height: 40px;
+}
+
+.login-signupham button:hover {
+  background-color: #1b7dc4;
+}
+
+/* Logout Button Specific */
+.log-out-btnham a {
+  color: #526D82;
+}
+
+/* Icons */
+.profile-iconham,
+.notification-iconham {
+  font-size: 45px;
+  color: #000;
+  cursor: pointer;
+  margin-left: 5px;
+  transition: color 0.3s ease;
+}
+
+.profile-iconham:hover,
+.notification-iconham:hover {
+  color: #4aa4ea;
+}
+
+  @media (min-width:750px) and (max-width:950px) {
+    .nav-menu{
+      gap: 2rem;
+      font-size: 1rem;
+    }
+    .profile-icon{
+      margin-left: 0.3rem;
+      font-size: 2rem;
+    }
+    .notification-icon{
+      margin-left: 0.3rem;
+      font-size: 2rem;
+    }
+    .login-signup button{
+      width: 12vw;
+      font-size: 0.9rem;
+    } 
+  }
+
+  
+  @media screen and (max-width:750px) {
+    .nav-menu{
+      display: none;
+    }
+    .navbar{
+      justify-content: space-between;
+    }
+    .login-signup{
+      margin-left: 60px;
+    }
+  }
+  @media screen and (max-width:500px) {
+    .login-signupham{
+      display: flex !important;
+    }
+    .log-out-btnham{
+      display: block;
+    }
+    .log-out-btn{
+      display: none;
+    }
+    .profile-icon{
+      display: none;
+    }
+    .notification-icon{
+      display: none;
+    }
+  }
+  /* Hamburger container */
+.hamburger-menu {
+  display: none;
+  cursor: pointer;
+  z-index: 1001;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: -30px;
+}
+
+/* Hamburger lines */
+.hamburger-icon {
+  width: 30px;
+  height: 22px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: fixed;
+}
+
+.hamburger-icon span {
+  height: 3px;
+  background-color: #333;
+  border-radius: 3px;
+  transition: all 0.3s ease;
+}
+
+/* Animate into X when open */
+.hamburger-icon.open span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.hamburger-icon.open span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger-icon.open span:nth-child(3) {
+  transform: rotate(-45deg) translate(5px, -5px);
+}
+
+/* Show hamburger on small screens */
+@media (max-width: 768px) {
+  .hamburger-menu {
+    display: block;
+  }
+
+  .nav-menu {
+    display: none;
+    flex-direction: column;
+    background: white;
+    position: fixed;
+    top: 100px;
+    left: 0;
+    width: 100%;
+    padding: 20px;
+  }
+
+  .nav-menu.active {
+    display: flex;
+  }
+}
+@media screen and (max-width:300px) {
+  .login-signup{
+    margin-left: 0px;
+  }
+  
+}
+@media screen and (max-width:230px) {
+  .navlogo{
+    display: none;
+  }
+  .hamburger-icon{
+    margin-left: 55vw;
+  }
+}
