--- a/frontend/src/Components/Template/Template.css
+++ b/frontend/src/Components/Template/Template.css
@@ -12,7 +12,7 @@
 
 .filter-tabs {
   display: flex;
-  gap: 75px;
+  gap: 3rem;
   margin-top: 20px;
   margin-bottom: 20px;
   list-style: none;
@@ -57,7 +57,7 @@
 .fixed-image {
   border-radius: 8px;
   height: 479px;
-  width: 670px;
+  width: 46vw;
 }
 
 .load-more-events {
@@ -65,7 +65,6 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 40%;
 }
 
 .load-more-events::before,
@@ -83,11 +82,59 @@
   border: none;
   border-radius: 50px;
   padding: 10px 30px;
-  font-size: 14px;
+  font-size: 0.7rem;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
 .load-more-events-btn:hover {
   background-color: #878585; 
+}
+
+@media (min-width:800px)and (max-width:1050px) {
+  .fixed{
+    top: 1042px;
+  }
+}
+@media (min-width:630px) and (max-width:800px) {
+  .fixed{
+    left: 7vw;
+  }
+  .fixed-image{
+    width: 55vw;
+  }
+  .template-design{
+    display: grid;
+    grid-template-columns: repeat(3,1fr) !important;
+  }
+}
+
+@media (min-width:630px)and (max-width:730px) {
+  .fixed{
+    top: 1042px;
+  }
+}
+@media (min-width:420px) and (max-width:630px) {
+  .template-design{
+    display: grid;
+    grid-template-columns: repeat(2,1fr) !important;
+  }
+}
+@media screen and (max-width:630px) {
+  .fixed{
+    display: none;
+  }
+  
+}
+@media  screen and (max-width:420px) {
+  .filter-tabs{
+    gap: 1.5rem;
+  }
+  .filter-tabs li{
+    font-size: 0.7rem;
+  }
+  .template-design{
+    grid-template-columns: repeat(1,1fr) !important;
+  }
+  
 }
