--- a/frontend/src/Components/TicketCard/TicketCard.css
+++ b/frontend/src/Components/TicketCard/TicketCard.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 .header-text {
@@ -27,7 +27,7 @@
 .ticket-card img.logo-img {
   height: 35px;
   width: 150px;
-  margin-right: 110px;
+  margin-left: 20px;
   margin-top: 10px;
 }
 
