--- a/frontend/src/Components/NavBar/NavBar.css
+++ b/frontend/src/Components/NavBar/NavBar.css
@@ -193,7 +193,7 @@
   position: relative;
 }
 
-.notification-badge {
+.notification-badge, .notification-badge-ham {
   position: absolute;
   top: -4px;
   right: -6px;
@@ -203,6 +203,8 @@
   border-radius: 50%;
   padding: 2px 6px;
 }
+
+
 
 /* Icons */
 .profile-iconham,
@@ -267,6 +269,9 @@
       display: none;
     }
     .log-in-btn{
+      display: none;
+    }
+    .notification-badge{
       display: none;
     }
   }
@@ -336,6 +341,7 @@
     margin-left: 0px;
   }
   
+  
 }
 @media screen and (max-width:230px) {
   .navlogo{
@@ -344,4 +350,5 @@
   .hamburger-icon{
     margin-left: 55vw;
   }
+  
 }
