--- a/frontend/src/Pages/CreateEvent/CreateEvent.css
+++ b/frontend/src/Pages/CreateEvent/CreateEvent.css
@@ -1,23 +1,24 @@
-.create-container{
+ .create-container{
     padding:30px;
-    }
-    .create-event {
-      width: 800px;
-      margin: 50px auto;
+    } 
+
+    .create-event-one {
+      width: 80%;
+       margin: 50px auto; 
       padding: 30px;
       background: #f9f9f9;
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
     }
     
     
-    .create-event h1 {
+    .create-event-one h1 {
       text-align: center;
-      font-size: 26px;
+      font-size: 1.6rem;
        font-weight: bold; 
       color: #333;
       margin-bottom: 25px;
     }
-    
+
     
     .post-event-fields {
       display: flex;
@@ -28,7 +29,7 @@
     
     .form-group label {
       font-weight: bold;
-      font-size: 16px;
+      font-size: 0.8rem;
       margin-bottom: 5px;
       color:rgb(26, 26, 26);
     }
