--- a/frontend/src/Pages/Login/Login.css
+++ b/frontend/src/Pages/Login/Login.css
@@ -2,8 +2,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     width: 100%;
+    padding-top:80px ;
+    padding-bottom: 80px;
     background: #f4f4f4;
     z-index: -100000;
 }
